--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-  "name": "gulp-require-sass",
+  "name": "gulp-remove-require",
   "version": "1.0.0",
-  "description": "Gulp plugin to filter out webpack style sass requires",
+  "description": "Gulp plugin to filter out webpack style sass requires (or whatever)",
   "main": "index.js",
   "scripts": {
     "test": "mocha"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/adjavaherian/gulp-require-sass"
+    "url": "https://github.com/adjavaherian/gulp-remove-require"
   },
   "keywords": [
     "gulp",
     "require",
     "sass",
     "filter",
-    "webpack"
+    "webpack",
+    "remove"
   ],
   "author": "adjavaherian",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/adjavaherian/gulp-require-sass/issues"
+    "url": "https://github.com/adjavaherian/gulp-remove-require/issues"
   },
-  "homepage": "https://github.com/adjavaherian/gulp-require-sass",
+  "homepage": "https://github.com/adjavaherian/gulp-remove-require",
   "dependencies": {
     "gulp": "^3.9.0",
     "gulp-sass": "^2.0.3",
